[package]
name = "mblf"
version = "0.1.0"
edition = "2018"
description = """
The MBLF-To-BF compiler written in Rust with Pest.
MBLF is a programming language on top of the esoteric programming language Brainfuck
"""

authors = ["Raymon Zutekouw <contact@raymon.dev>"]

repository = "https://github.com/MBLF-Project/mblf"
license = "MIT OR Apache-2.0"

keywords = ["compiler", "mblf", "brainfuck", "pest"]
categories = ["compilers", "command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0.44"
string-builder = "0.2.0"
pest = "2.1.3"
pest_derive = "2.1.0"
structopt = "0.3.23"
